# agent-recorder

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASING.md  demo-login.mjs  install.sh  package-lock.json  package.json  record.mjs
docs/: pr-v1-core-cleanup.md
examples/actions/: autoplan-login.spec.json  login-form.html  login.actions.json  pricing-scroll.html  pricing.actions.json  task-board.html  task.actions.json
scripts/: agent-capture.mjs  agent-proof-autoplan.mjs  agent-proof-live.mjs  agent-proof-server.mjs  agent-proof.mjs  benchmark-side-by-side.sh  pelian-hero-boot-click.js  pelian-scroll-click.js  test-ab-core.sh
src/: main.rs
tests/: e2e.rs
