[package]
name = "agent-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }
tokio-tungstenite = "0.23"
url = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.12"
